@@ -5,11 +5,12 @@ import com.intellij.codeInsight.intention.impl.BaseIntentionAction;
 import com.intellij.codeInspection.CommonQuickFixBundle;
 import com.intellij.java.JavaBundle;
 import com.intellij.lang.java.JavaLanguage;
-import com.intellij.openapi.command.WriteCommandAction;
-import com.intellij.openapi.editor.Editor;
+import com.intellij.modcommand.ActionContext;
+import com.intellij.modcommand.ModCommand;
+import com.intellij.modcommand.ModCommandAction;
+import com.intellij.modcommand.Presentation;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.module.ModuleUtilCore;
-import com.intellij.openapi.project.DumbService;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.VirtualFile;
@@ -18,16 +19,16 @@ import com.intellij.psi.*;
 import com.intellij.psi.codeStyle.JavaCodeStyleManager;
 import com.intellij.psi.util.PsiUtil;
 import com.intellij.psi.util.PsiUtilCore;
-import com.intellij.util.IncorrectOperationException;
+import com.intellij.util.ObjectUtils;
+import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
-public class MakeExternalAnnotationExplicit extends BaseIntentionAction {
+public class MakeExternalAnnotationExplicit implements ModCommandAction {
 
   @Nls
   @NotNull
@@ -37,30 +38,33 @@ public class MakeExternalAnnotationExplicit extends BaseIntentionAction {
   }
 
   @Override
-  public boolean isAvailable(@NotNull Project project, Editor editor, PsiFile file) {
-    final PsiElement leaf = file.findElementAt(editor.getCaretModel().getOffset());
+  public @Nullable Presentation getPresentation(@NotNull ActionContext context) {
+    if (!BaseIntentionAction.canModify(context.file())) return null;
+    final PsiElement leaf = context.findLeaf();
+    PsiFile file = context.file();
     final PsiModifierListOwner owner = NonCodeAnnotationsLineMarkerProvider.getAnnotationOwner(leaf);
     if (owner != null && owner.getLanguage().isKindOf(JavaLanguage.INSTANCE) && isWritable(owner) &&
         ModuleUtilCore.findModuleForPsiElement(file) != null &&
         PsiUtil.getLanguageLevel(file).isAtLeast(LanguageLevel.JDK_1_5)) {
-      final PsiAnnotation[] annotations = getAnnotations(project, owner);
+      final PsiAnnotation[] annotations = getAnnotations(context.project(), owner);
       if (annotations.length > 0) {
         final String annos = StringUtil.join(annotations, annotation -> {
           final PsiJavaCodeReferenceElement nameRef = annotation.getNameReferenceElement();
           final String name = nameRef != null ? nameRef.getReferenceName() : annotation.getQualifiedName();
           return "@" + name + annotation.getParameterList().getText();
         }, " ");
-        setText(CommonQuickFixBundle.message("fix.insert.x", annos));
-        return true;
+        return Presentation.of(CommonQuickFixBundle.message("fix.insert.x", annos));
       }
     }
    
-    return false;
+    return null;
   }
 
   @Override
-  public void invoke(@NotNull Project project, Editor editor, PsiFile file) throws IncorrectOperationException {
-    final PsiElement leaf = file.findElementAt(editor.getCaretModel().getOffset());
+  public @NotNull ModCommand perform(@NotNull ActionContext context) {
+    final PsiElement leaf = context.findLeaf();
+    final PsiFile file = context.file();
+    final Project project = context.project();
     final PsiModifierListOwner owner = NonCodeAnnotationsLineMarkerProvider.getAnnotationOwner(leaf);
     assert owner != null;
     final PsiModifierList modifierList = owner.getModifierList();
@@ -68,32 +72,16 @@ public class MakeExternalAnnotationExplicit extends BaseIntentionAction {
     final Module module = ModuleUtilCore.findModuleForPsiElement(file);
     assert module != null;
 
-    ExternalAnnotationsManager externalAnnotationsManager = ExternalAnnotationsManager.getInstance(project);
+    ModCommandAwareExternalAnnotationsManager externalAnnotationsManager = ObjectUtils.tryCast(
+      ExternalAnnotationsManager.getInstance(project), ModCommandAwareExternalAnnotationsManager.class);
 
-    if (!FileModificationService.getInstance().preparePsiElementsForWrite(getFilesToWrite(file, owner, externalAnnotationsManager))) return;
-
-    for (PsiAnnotation anno : getAnnotations(project, owner)) {
-      final String qname = anno.getQualifiedName();
-      assert qname != null;
-      externalAnnotationsManager.deannotate(owner, qname);
-      
-      WriteCommandAction.runWriteCommandAction(project, () -> DumbService.getInstance(project).withAlternativeResolveEnabled(
-        () -> JavaCodeStyleManager.getInstance(project).shortenClassReferences(modifierList.addAfter(anno, null))));
-    }
-
-    
-  }
-
-  public static List<PsiFile> getFilesToWrite(PsiFile file,
-                                              PsiModifierListOwner owner,
-                                              ExternalAnnotationsManager externalAnnotationsManager) {
-    List<PsiFile> files = externalAnnotationsManager.findExternalAnnotationsFiles(owner);
-    if (files != null) {
-      List<PsiFile> elements = new ArrayList<>(files);
-      elements.add(file);
-      return elements;
-    }
-    return Collections.singletonList(file);
+    PsiAnnotation[] annotations = getAnnotations(project, owner);
+    return ModCommand.psiUpdate(modifierList, writableList -> {
+      for (PsiAnnotation anno : annotations) {
+        JavaCodeStyleManager.getInstance(project).shortenClassReferences(writableList.addAfter(anno, null));
+      }
+    }).andThen(externalAnnotationsManager == null ? ModCommand.nop() : 
+               externalAnnotationsManager.deannotateModCommand(List.of(owner), ContainerUtil.map(annotations, PsiAnnotation::getQualifiedName)));
   }
 
   private static PsiAnnotation @NotNull [] getAnnotations(@NotNull Project project, PsiModifierListOwner owner) {
@@ -110,11 +98,6 @@ public class MakeExternalAnnotationExplicit extends BaseIntentionAction {
                !owner.hasAnnotation(qualifiedName);
       }).toArray(PsiAnnotation[]::new);
     }
-  }
-
-  @Override
-  public boolean startInWriteAction() {
-    return false;
   }
 
   private static boolean isWritable(PsiModifierListOwner owner) {
